Refactor BigDecimal-based gatherers
+ We only need two gatherers if we move the actual work to the state objects
+ Fixed documentation to reflect reality